manifests/service-2.yml
apiVersion: v1
kind: Service
metadata:
    name: "bishaljavaspringtemp-f772"
    labels:
        app: "bishaljavaspringtemp-f772"
spec:
    type: LoadBalancer
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "bishaljavaspringtemp-f772"
