manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "bishalbugbashaks"
    labels:
        app: "bishalbugbashaks"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: bishalbugbashaks45f9-bishalbugbashaks.01d4a105bd4546febc77.southindia.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "bishalbugbashaks"
                servicePort: 80
